Overflow fix.

--- a/ui/css/ui.css
+++ b/ui/css/ui.css
@@ -859,7 +859,6 @@ hr {
   padding-top: 50px;
   padding-bottom: 50px;
   background-position: left 48%;
-  white-space: nowrap;
 }
 
 #help .sections {
